tests/good/7/main.sm
(module Main imports (StdLib))

(vars (
  (let x 23)
  (let z 42)
  (let y (+ x z))
))

(functions (
  (function main () y)
))
