tests/bad/arity_check/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function vararg (y ...x) 0)

  (function main ()
    (begin
      (vararg)
    )
  )
))
